Add linux-libc-dev to apt packages, take 3

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: haskell
 ghc:
     8.6.5
 before_install:
-    - sudo apt update
-    - sudo apt install -y linux-libc-dev
+    - apt update
+    - apt install -y linux-libc-dev
