--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ ghc:
     8.6.5
 sudo: required
 before_install:
-    - sudo apt update
-    - sudo apt install -y linux-libc-dev
+    - sudo apt-get update
+    - sudo apt-get install -y linux-libc-dev
