--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ dist: xenial
 language: haskell
 ghc:
     8.6.5
-sudo: required
-before_install:
-    - sudo apt-get update
-    - sudo apt-get install -y linux-libc-dev
+#sudo: required
+#before_install:
+#    - sudo apt-get update
+#    - sudo apt-get install -y linux-libc-dev
+addon:
+    apt:
+        update: true
+        packages:
+            - linux-libc-dev
